syntax = "proto3";

package speedtest;

// The greeting service definition.
service RequestResponse {
  // Sends a greeting
  rpc doCycle (TestRequest) returns (TestReply) {}
}


message TestRequest{
  string name = 7;
}

message TestReply {
  int32 testint = 1;
  string teststring = 2;
  string testdate = 3;
  string teststring2 = 4;
  bool testbool = 5;
}
